# BenchEverything

./: .gitignore  CMakeLists.txt  README.md
cmake/: BenchmarkUtils.cmake
cmake/toolchains/: clang.cmake  gcc.cmake
experiments/container_push_back/: CMakeLists.txt  README.md.template
experiments/container_push_back/src/: benchmark.cpp
experiments/float_addition/: CMakeLists.txt  README.md.template
experiments/float_addition/src/: benchmark.cpp
experiments/int_addition/: CMakeLists.txt  README.md.template
experiments/int_addition/src/: benchmark.cpp
reports/darwin-arm64-Apple-M3-Pro/comparisons/: clang-15.0.0_Debug_O0_vs_2_contenders_report.md  gcc-15.0.0_Debug_O0_vs_2_contenders_report.md  gcc-15.0.0_vs_clang-20.1.2_report.md  gcc-15.0.0_vs_gcc-15.0.0_report.md
scripts/: generate_combined_report.py  generate_report.py  old_generate_report.py  old_run_benchmarks.py  requirements.txt  run_benchmarks.py
scripts/config/: benchmark_config.json  benchmark_config_test.json
scripts/lib/: assembly.py  config.py  data_loader.py  environment.py  logger.py  metadata.py  report_utils.py  runner.py  template.py
scripts/ui/: DESIGN.md  bench_ui.py  main.py
scripts/ui/models/: __init__.py
scripts/ui/utils/: __init__.py  command_thread.py  constants.py  experiment_utils.py
scripts/ui/views/: __init__.py  main_window.py
scripts/ui/views/tabs/: __init__.py  combined_report_tab.py  create_experiment_tab.py  generate_report_tab.py  pipeline_tab.py  run_benchmarks_tab.py
scripts/ui/views/widgets/: __init__.py  common_controls.py  path_selector.py  (+1 more)
(+173 files in other folders)
